--- a/index.html
+++ b/index.html
@@ -153,12 +153,13 @@
 						</li>
 						<li>
 							<strong>AI for Math</strong>: advancing mathematical reasoning capabilities of AI systems and LLMs across multimodal, knowledge-intensive, and real-world contexts
+							<a href="https://arxiv.org/abs/2506.07927" target="_blank">[IneqMath]</a>
 							<a href="https://mathvista.github.io/" target="_blank">[MathVista]</a>
 							<a href="https://arxiv.org/abs/2403.14624" target="_blank">[MathVerse]</a>
 							<a href="https://promptpg.github.io/" target="_blank">[PromptPG]</a>
 							<a href="https://lupantech.github.io/inter-gps/" target="_blank">[Inter-GPS]</a>
 							<a href="https://arxiv.org/abs/2110.13214" target="_blank">[IconQA]</a>
-							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a>
+							<a href="https://arxiv.org/abs/2305.12524v1" target="_blank">[TheoremQA]</a>
 							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[DL4Math]</a>
 							<a href="https://mathai2024.github.io/" target="_blank">[MATH-AI]</a>
 						</li>
@@ -193,6 +194,17 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
+
+				<li>
+					<strong>[06/2025]&nbsp; <font color="red">New!</font></strong>
+					Glad to co-organize the <b><a href="https://cvpr2025mutimodalmathreasoning.github.io/MM_math_reasoning/" target="_blank">Multimodal Mathematical Reasoning</a></b>
+					Workshop at <b><a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2025</a></b>!
+				</li>
+				<li>
+					<strong>[06/2025]&nbsp; <font color="red">New!</font></strong>
+					Our new study on solving inequality proofs with LLMs is available at
+					<b><a href="https://arxiv.org/abs/2506.07927" target="_blank">Preprint</a></b>.
+				</li>
 				<li>
 					<strong>[05/2025]&nbsp; <font color="red">New!</font></strong>
 					Excited that
@@ -266,30 +278,30 @@
 					A paper on multi-image understanding is available at
 					<b><a href="https://arxiv.org/abs/2406.09411" target="_blank">Preprint</a></b>.
 				</li>
-				<li>
-					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
-					A paper on enhancing LVLMs with self-training is available at
-					<b><a href="https://arxiv.org/abs/2405.19716" target="_blank">Preprint</a></b>.
-				</li>
-				<li>
-					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
-					Thrilled to be awarded the
-					<b><a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">Bloomberg Data Science Ph.D. Fellowship</a></b>! Thanks!
-				</li>
-				<li>
-					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
-					One paper on advanced quantitative reasoning is accepted to
-					<b><a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a> (Findings)</b>.
-				</li>
-				<li>
-					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
-					Two papers on math reasoning and VLMs are accepted at <b><a href="https://icml.cc/Conferences/2024" target="_blank">ICML 2024</a></b>. See you in Vienna!
-				</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
+							A paper on enhancing LVLMs with self-training is available at
+							<b><a href="https://arxiv.org/abs/2405.19716" target="_blank">Preprint</a></b>.
+						</li>
+						<li>
+							<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
+							Thrilled to be awarded the
+							<b><a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">Bloomberg Data Science Ph.D. Fellowship</a></b>! Thanks!
+						</li>
+						<li>
+							<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
+							One paper on advanced quantitative reasoning is accepted to
+							<b><a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a> (Findings)</b>.
+						</li>
+						<li>
+							<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
+							Two papers on math reasoning and VLMs are accepted at <b><a href="https://icml.cc/Conferences/2024" target="_blank">ICML 2024</a></b>. See you in Vienna!
+						</li>
 						<li>
 							<strong>[04/2024]&nbsp; <font color="red">New!</font></strong>
 							Defended my doctoral dissertation! Thanks to my advisor and committee members!
@@ -587,22 +599,6 @@
 		<h3 id="Travels" style="">Upcoming Travel</h3>
 		<hr>
 		<ul>
-			<!-- <li>October 7-9, 2024:
-				<a href="https://colmweb.org/" target="_blank">COLM 2024 at Philadelphia, PA</a>
-			</li> -->
-			<!-- <li>November 12 - November 16, 2024:
-				<a href="https://2024.emnlp.org/" target="_blank">EMNLP 2024 at Miami, Florida</a>
-			</li> -->
-			<!-- <li>January 8-9, 2025:
-				<a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_intro" target="_blank">JMM 2025 at Seattle, Washington</a>
-			</li> -->
-			<!-- <li>May 2 - May 4, 2025:
-				<a href="https://2025.naacl.org/" target="_blank">NAACL 2025 at Albuquerque, New Mexico</a>
-			</li> -->
-			<!-- <li>June 10 - June 17, 2025:
-				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
-				(TBD)
-			</li> -->
 			<li>October 19 - October 23, 2025:
 				<a href="https://iccv.thecvf.com/" target="_blank">ICCV 2025 at Honolulu, Hawaii</a>
 				(TBD)
@@ -610,11 +606,11 @@
 			<li>December 9 - December 15, 2025:
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
 			</li>
-			<!-- <li>June 2026 (TBD):
-				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado (TBD)</a>
+			<!-- <li>June 6 - June 12, 2026:
+				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a> (TBD)
 			</li>
 			<li>July 2 - July 7, 2026:
-				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California (TBD)</a>
+				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a> (TBD)
 			</li> -->
 			<!-- <li>October 2026 (TBD):
 				<a href="https://colmweb.org/index.html" target="_blank">COLM 2026 at XXXX (TBD)</a>
@@ -664,6 +660,36 @@
 				<a id="award" href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">
 					<font color="red"><b>🏆 Best Paper Award, KnowledgeNLP Workshop at NAACL 2025</b> </font>
 				</a>
+			</div>
+		</div>
+		<hr>
+
+		<!-- OctoTools -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/arxiv25_ineqmath/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">
+						Solving Inequality Proofs with Large Language Models
+					</font>
+				</b><br>
+				Jiayi Sheng*, Luna Lyu*, Jikai Jin, Tony Xia, Alex Gu, James Zou†, <b>Pan Lu†</b>
+				<br>
+				<b><a href="https://arxiv.org/abs/2506.07927" target="_blank">arXiv:2502.11271&nbsp;</a></b>
+				<a href="https://ineqmath.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2506.07927" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/ineqmath" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/AI4Math/IneqMath" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://huggingface.co/spaces/AI4Math/IneqMath-Leaderboard" target="_blank"> <small>[Submission]&nbsp;</small></a>
+				<a href="https://x.com/lupantech/status/1932866286427779586" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="projects/arxiv25_ineqmath/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+				<a href="https://github.com/lupantech/ineqmath" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/ineqmath?style=social" alt="GitHub stars"></a>
+				<br>(† Co-senior authors)<br>
 			</div>
 		</div>
 		<hr>
@@ -1906,6 +1932,11 @@
 			</ul>
 		<h4 id="Service" style="">Workshops and Tutorials</h4>
 			<ul>
+				<li>
+					<strong>Co-organizer</strong>, Tutorial on
+					<a href="https://cvpr2025mutimodalmathreasoning.github.io/MM_math_reasoning/" target="_blank">Multimodal Mathematical Reasoning</a> 
+					at CVPR 2025
+				</li>
 				<li>
 					<strong>Co-organizer</strong>, Workshop on
 					<a href="https://mathai2024.github.io/" target="_blank">MATH-AI: The 4th Workshop on Mathematical Reasoning and AI</a> 
