--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
-
+				<li>
+					<strong>[07/2025]&nbsp; <font color="red">New!</font></strong>
+					Glad to co-organize the 5th <b><a href="https://mathai2025.github.io/" target="_blank">MATH-AI</a></b>
+					Workshop at <b><a href="https://nips.cc/Conferences/2025" target="_blank">NeurIPS 2025</a></b>!
+				</li>
 				<li>
 					<strong>[06/2025]&nbsp; <font color="red">New!</font></strong>
 					Glad to co-organize the <b><a href="https://cvpr2025mutimodalmathreasoning.github.io/MM_math_reasoning/" target="_blank">Multimodal Mathematical Reasoning</a></b>
@@ -268,21 +272,21 @@
 					One paper on visual math problems is accepted to
 					<b><a href="https://eccv2024.ecva.net/Conferences/2024" target="_blank">ECCV 2024</a></b>.
 				</li>
-				<li>
-					<strong>[06/2024]&nbsp; <font color="red">New!</font></strong>
-					A paper on debugging visual programs is available at
-					<b><a href="https://arxiv.org/abs/2406.13444" target="_blank">Preprint</a></b>.
-				</li>
-				<li>
-					<strong>[06/2024]&nbsp; <font color="red">New!</font></strong>
-					A paper on multi-image understanding is available at
-					<b><a href="https://arxiv.org/abs/2406.09411" target="_blank">Preprint</a></b>.
-				</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[06/2024]&nbsp; <font color="red">New!</font></strong>
+							A paper on debugging visual programs is available at
+							<b><a href="https://arxiv.org/abs/2406.13444" target="_blank">Preprint</a></b>.
+						</li>
+						<li>
+							<strong>[06/2024]&nbsp; <font color="red">New!</font></strong>
+							A paper on multi-image understanding is available at
+							<b><a href="https://arxiv.org/abs/2406.09411" target="_blank">Preprint</a></b>.
+						</li>
 						<li>
 							<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
 							A paper on enhancing LVLMs with self-training is available at
@@ -1932,6 +1936,11 @@
 			</ul>
 		<h4 id="Service" style="">Workshops and Tutorials</h4>
 			<ul>
+				<li>
+					<strong>Co-organizer</strong>, Workshop on
+					<a href="https://mathai2025.github.io/" target="_blank">MATH-AI: The 5th Workshop on Mathematical Reasoning and AI</a> 
+					at NeurIPS 2025
+				</li>
 				<li>
 					<strong>Co-organizer</strong>, Tutorial on
 					<a href="https://cvpr2025mutimodalmathreasoning.github.io/MM_math_reasoning/" target="_blank">Multimodal Mathematical Reasoning</a> 
