--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 				<li>
 					<strong>[09/2025]&nbsp; <font color="red">New!</font></strong>
 					Excited to have our <b><a href="https://ineqmath.github.io/" target="_blank">IneqMath</a></b>
-					paper accepted at <b><a href="https://nips.cc/Conferences/2025" target="_blank">NeurIPS 2025</a></b> as a <b>Spotlight</b>!
+					paper accepted at <b><a href="https://nips.cc/Conferences/2025" target="_blank">NeurIPS 2025</a></b> as a <b>Spotlight</b> 🎉!
 				</li>
 				<li>
 					<strong>[08/2025]&nbsp; <font color="red">New!</font></strong>
