--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[08/2025]&nbsp; <font color="red">New!</font></strong>
+					Honored to be selected as a <b><a href="https://topscinet.com/scientist_profile/Lu,%20Pan/2017/?stype=single_year" target="_blank">World's Top 2% Scientists</a></b> by Elsevier!
+				</li>
+				<li>
 					<strong>[09/2025]&nbsp; <font color="red">New!</font></strong>
 					Excited to have our <b><a href="https://ineqmath.github.io/" target="_blank">IneqMath</a></b>
 					paper accepted at <b><a href="https://nips.cc/Conferences/2025" target="_blank">NeurIPS 2025</a></b> as a <b>Spotlight</b> 🎉!
@@ -2038,9 +2042,8 @@
 		<hr>
 		<ul>
 			<li>
-				🏆 <strong>AI for Math Fund Grant Award ($1M Grant for two years)</strong>, 2025
-				<a href="https://www.renaissancephilanthropy.org/crowdsourcing-and-reinventing-the-next-generation-of-dynamic-and-scalable-math-benchmarks" target="_blank">[Link]</a>
-				<a href="https://www.renaissancephilanthropy.org/ai-for-math-fund-projects" target="_blank">[List]</a>
+				🏆 <strong>World's Top 2% Scientists, Elsevier</strong>, 2025
+				<a href="https://topscinet.com/scientist_profile/Lu,%20Pan/2017/?stype=single_year" target="_blank">[Link]</a>≈
 			</li>
 			<li>
 				🏆 <strong>Most Influential ICLR Papers</strong> (ICLR 2024), 2025
