added new papers

--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@
 					<ul>
 						<li>
 							<strong>Tool-Augmented LLMs</strong> and <strong>Agentic Systems</strong> for complex reasoning
+							<a href="https://agentflow.stanford.edu/" target="_blank">[AgentFlow]</a>
 							<a href="https://octotools.github.io/" target="_blank">[OctoTools]</a>
-							<!-- <a href="https://textgrad.com/" target="_blank">[TextGrad]</a> -->
-							<a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a>
-							<a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a>
+							<a href="https://arxiv.org/abs/2510.06217" target="_blank">[TaTToo]</a>
+							<a href="https://arxiv.org/abs/2509.25370" target="_blank">[AgentDebug]</a>
+							<a href="https://arxiv.org/abs/2504.04785" target="_blank">[W4S]</a>
+							<!-- <a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a> -->
 						</li>
 						<li>
 							<strong>Post-Training</strong> and <strong>Test-Time Training</strong> techniques for foundation models
@@ -195,6 +197,11 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
+				<li>
+					<strong>[10/2025]&nbsp; <font color="red">New!</font></strong>
+					Our trainable agentic framework <b><a href="https://agentflow.stanford.edu/" target="_blank">AgentFlow</a></b> for planning and tool use is available at
+					<b><a href="https://arxiv.org/abs/2510.05592" target="_blank">Preprint</a></b>.
+				</li>
 				<li>
 					<strong>[09/2025]&nbsp; <font color="red">New!</font></strong>
 					Honored to be selected as a <b><a href="https://topscinet.com/scientist_profile/Lu,%20Pan/2017/?stype=single_year" target="_blank">World's Top 2% Scientists</a></b> by Elsevier!
@@ -617,17 +624,13 @@
 		<h3 id="Travels" style="">Upcoming Travel</h3>
 		<hr>
 		<ul>
-			<!-- <li>October 19 - October 23, 2025:
-				<a href="https://iccv.thecvf.com/" target="_blank">ICCV 2025 at Honolulu, Hawaii</a>
-				(TBD)
-			</li> -->
-			<li>December 9 - December 15, 2025:
+			<li>December 2 - December 7, 2025:
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
 			</li>
-			<!-- <li>June 6 - June 12, 2026:
+			<!-- <li>June 3 - June 7, 2026:
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a> (TBD)
-			</li>
-			<li>July 2 - July 7, 2026:
+			</li> -->
+			<!-- <li>July 2 - July 7, 2026:
 				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a> (TBD)
 			</li> -->
 			<!-- <li>October 2026 (TBD):
@@ -644,6 +647,71 @@
 		All publications can be found on my <a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en" target="_blank">Google Scholar</a> page.
 		<br>
 		<br>
+
+		<!-- AgentFlow -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/arxiv25_agentflow/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="logos/fire.png" id="logo">
+					<!-- <img src="logos/fire.png" id="logo"> -->
+				</a>
+				<b>
+					<font color="black">
+						In-the-Flow Agentic System Optimization for Effective Planning and Tool Use
+					</font>
+				</b><br>
+				Zhuofeng Li*, Haoxiang Zhang*, Seungju Han, Sheng Liu, Jianwen Xie, Yu Zhang, Yejin Choi, James Zou†, <b>Pan Lu†</b>
+				<br>
+				<b><a href="https://arxiv.org/abs/2510.05592" target="_blank">arXiv:2510.05592&nbsp;</a></b>
+				<a href="https://agentflow.stanford.edu/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://huggingface.co/papers/2510.05592" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/AgentFlow" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/AgentFlow" target="_blank"> <small>[Model]&nbsp;</small></a>
+				<a href="https://huggingface.co/spaces/AgentFlow/agentflow" target="_blank"> <small>[Demo]&nbsp;</small></a>
+				<a href="https://x.com/lupantech" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://join.slack.com/t/agentflow-co/shared_invite/zt-3f712xngl-LfxS4gmftAeKvcxR3nSkWQ" target="_blank"> <small>[Slack]&nbsp;</small></a>
+				<a href="projects/arxiv25_agentflow/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+				<!-- <a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/octotools/octotools?style=social" alt="GitHub stars"></a> -->
+				<br>(*Equal Contribution) (†Co-senior authors)<br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- IneqMath -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/neurips25_ineqmath/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">
+						Solving Inequality Proofs with Large Language Models
+					</font>
+				</b><br>
+				Jiayi Sheng*, Luna Lyu*, Jikai Jin, Tony Xia, Alex Gu, James Zou†, <b>Pan Lu†</b>
+				<br>
+				<b><a href="https://arxiv.org/abs/2506.07927" target="_blank">NeurIPS 2025&nbsp;</a></b>
+				<a href="https://ineqmath.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2506.07927" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/ineqmath" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/AI4Math/IneqMath" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://huggingface.co/spaces/AI4Math/IneqMath-Leaderboard" target="_blank"> <small>[Submission]&nbsp;</small></a>
+				<a href="https://x.com/lupantech/status/1932866286427779586" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="projects/neurips25_ineqmath/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+				<a href="https://github.com/lupantech/ineqmath" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/ineqmath?style=social" alt="GitHub stars"></a>
+				<br>(*Equal Contribution) (†Co-senior authors)<br>
+				<a id="award" href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">
+					<font color="red"><b>🏆 Spotlight (Top 3%)</b> </font>
+				</a>
+			</div>
+		</div>
+		<hr>
 
 		<!-- OctoTools -->
 		<div class="row">
@@ -677,39 +745,6 @@
 				<br>(*Equal Contribution)<br>
 				<a id="award" href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">
 					<font color="red"><b>🏆 Best Paper Award, KnowledgeNLP Workshop at NAACL 2025</b> </font>
-				</a>
-			</div>
-		</div>
-		<hr>
-
-		<!-- OctoTools -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="projects/neurips25_ineqmath/cover.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<a href="">
-					<img src="logos/fire.png" id="logo">
-				</a>
-				<b>
-					<font color="black">
-						Solving Inequality Proofs with Large Language Models
-					</font>
-				</b><br>
-				Jiayi Sheng*, Luna Lyu*, Jikai Jin, Tony Xia, Alex Gu, James Zou†, <b>Pan Lu†</b>
-				<br>
-				<b><a href="https://arxiv.org/abs/2506.07927" target="_blank">NeurIPS 2025&nbsp;</a></b>
-				<a href="https://ineqmath.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="https://arxiv.org/abs/2506.07927" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://github.com/lupantech/ineqmath" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://huggingface.co/datasets/AI4Math/IneqMath" target="_blank"> <small>[Data]&nbsp;</small></a>
-				<a href="https://huggingface.co/spaces/AI4Math/IneqMath-Leaderboard" target="_blank"> <small>[Submission]&nbsp;</small></a>
-				<a href="https://x.com/lupantech/status/1932866286427779586" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="projects/neurips25_ineqmath/bib.txt" target="_blank"> <small>[BibTex]</small></a>
-				<a href="https://github.com/lupantech/ineqmath" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/ineqmath?style=social" alt="GitHub stars"></a>
-				<br>(† Co-senior authors)<br>
-				<a id="award" href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">
-					<font color="red"><b>🏆 Spotlight (Top 3%)</b> </font>
 				</a>
 			</div>
 		</div>
