--- a/index.html
+++ b/index.html
@@ -671,10 +671,10 @@
 				<a href="https://github.com/lupantech/AgentFlow" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/AgentFlow" target="_blank"> <small>[Model]&nbsp;</small></a>
 				<a href="https://huggingface.co/spaces/AgentFlow/agentflow" target="_blank"> <small>[Demo]&nbsp;</small></a>
-				<a href="https://x.com/lupantech" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://x.com/lupantech/status/1976016000345919803" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://join.slack.com/t/agentflow-co/shared_invite/zt-3f712xngl-LfxS4gmftAeKvcxR3nSkWQ" target="_blank"> <small>[Slack]&nbsp;</small></a>
 				<a href="projects/arxiv25_agentflow/bib.txt" target="_blank"> <small>[BibTex]</small></a>
-				<!-- <a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/octotools/octotools?style=social" alt="GitHub stars"></a> -->
+				<a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/octotools/octotools?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
 			</div>
 		</div>
