--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 			<div class="col-md-9">
 				<a href="">
 					<img src="logos/fire.png" id="logo">
-					<!-- <img src="logos/fire.png" id="logo"> -->
+					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -674,7 +674,7 @@
 				<a href="https://x.com/lupantech/status/1976016000345919803" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://join.slack.com/t/agentflow-co/shared_invite/zt-3f712xngl-LfxS4gmftAeKvcxR3nSkWQ" target="_blank"> <small>[Slack]&nbsp;</small></a>
 				<a href="projects/arxiv25_agentflow/bib.txt" target="_blank"> <small>[BibTex]</small></a>
-				<a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/octotools/octotools?style=social" alt="GitHub stars"></a>
+				<a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/AgentFlow?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
 			</div>
 		</div>
