--- a/index.html
+++ b/index.html
@@ -672,8 +672,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo">
-					<img src="logos/fire.png" id="logo">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -784,7 +783,6 @@
 		</div>
 		<hr>
 
-
 		<!-- W4S -->
 		<div class="row publication-item" data-category="agentic">
 			<div class="col-md-3">
@@ -846,8 +844,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo">
-					<img src="logos/fire.png" id="logo">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -883,8 +880,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo">
-					<img src="logos/fire.png" id="logo">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -1230,9 +1226,9 @@
 				<img class="img-fluid img-rounded" src="imgs/icml24_scibench.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
-				<a href="">
+				<!-- <a href="">
 					<img src="logos/fire.png" id="logo">
-				</a>
+				</a> -->
 				<b>
 					<font color="black">SciBench: Evaluating College-Level Scientific Problem-Solving Abilities of Large Language Models</font>
 				</b><br>
@@ -1261,7 +1257,6 @@
 				<img class="img-fluid img-rounded" src="imgs/icml24_sphinx.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
-
 				<b>
 					<font color="black">SPHINX-X: Scaling Data and Parameters for a Family of Multi-modal Large Language Models
 					</font>
@@ -1543,8 +1538,7 @@
 			<div class="col-md-9">
 				<a href="https://scienceqa.github.io/">
 					<!-- <img src="logos/scienceqa.png" id="logo"> -->
-					<img src="logos/fire.png" id="logo">
-					<img src="logos/fire.png" id="logo">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">Learn to Explain: Multimodal Reasoning via Thought Chains for Science Question
@@ -1755,7 +1749,7 @@
 		<hr>
 
 		<!-- ACL21 -->
-		<div class="row publication-item" data-category="ai-math">
+		<div class="row publication-item" data-category="highlights, ai-math">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/acl21_gps.png" style="" alt="">
 			</div>
