--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 			<!-- <button class="category-btn" data-category="vlm-reasoning">VLM Reasoning</button> -->
 			<button class="category-btn" data-category="ai-math">AI for Math</button>
 			<button class="category-btn" data-category="ai-science">AI for Science</button>
-			<button class="category-btn" data-category="others">Others</button>
+			<button class="category-btn" data-category="others">Multimodal AI</button>
 		</div>
 		<br>
 
@@ -687,11 +687,15 @@
 				<a href="https://github.com/lupantech/AgentFlow" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/AgentFlow" target="_blank"> <small>[Model]&nbsp;</small></a>
 				<a href="https://huggingface.co/spaces/AgentFlow/agentflow" target="_blank"> <small>[Demo]&nbsp;</small></a>
+				<a href="https://www.youtube.com/watch?v=kIQbCQIH1SI" target="_blank"> <small>[YouTube]&nbsp;</small></a>
 				<a href="https://x.com/lupantech/status/1976016000345919803" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://join.slack.com/t/agentflow-co/shared_invite/zt-3f712xngl-LfxS4gmftAeKvcxR3nSkWQ" target="_blank"> <small>[Slack]&nbsp;</small></a>
 				<a href="projects/arxiv25_agentflow/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/AgentFlow?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
+				<a id="award" href="https://huggingface.co/papers/date/2025-10-08" target="_blank">
+					<font color="red"><b>#2 Paper of the day on Hugging Face</b></font>
+				</a>
 			</div>
 		</div>
 		<hr>
@@ -783,27 +787,6 @@
 		</div>
 		<hr>
 
-		<!-- W4S -->
-		<div class="row publication-item" data-category="agentic">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="projects/colm25_w4s/cover.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<b>
-					<font color="black">
-						Weak-for-Strong: Training Weak Meta-Agent to Harness Strong Executors
-					</font>
-				</b><br>
-				Fan Nie, Lan Feng, Haotian Ye, Weixin Liang, <b>Pan Lu†</b>, Huaxiu Yao, Alexandre Alahi, James Zou 
-				<br>
-				<b><a href="https://arxiv.org/abs/2504.04785" target="_blank">COLM 2025&nbsp;</a></b>
-				<a href="https://arxiv.org/abs/2504.04785" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://github.com/fannie1208/W4S" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="projects/colm25_w4s/bib.txt" target="_blank"> <small>[BibTex]</small></a>
-			</div>
-		</div>
-		<hr>
-
 		<!-- IneqMath -->
 		<div class="row publication-item" data-category="highlights, ai-math">
 			<div class="col-md-3">
@@ -828,11 +811,32 @@
 				<a href="https://huggingface.co/spaces/AI4Math/IneqMath-Leaderboard" target="_blank"> <small>[Submission]&nbsp;</small></a>
 				<a href="https://x.com/lupantech/status/1932866286427779586" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="projects/neurips25_ineqmath/bib.txt" target="_blank"> <small>[BibTex]</small></a>
-				<a href="https://github.com/lupantech/ineqmath" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/ineqmath?style=social" alt="GitHub stars"></a>
+				<!-- <a href="https://github.com/lupantech/ineqmath" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/ineqmath?style=social" alt="GitHub stars"></a> -->
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
 				<a id="award" href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">
-					<font color="red"><b>🏆 Spotlight (Top 3%)</b> </font>
+					<font color="red"><b>🏆 NeurIPS 2025 Spotlight (Top 3%)</b> </font>
 				</a>
+			</div>
+		</div>
+		<hr>
+
+		<!-- W4S -->
+		<div class="row publication-item" data-category="agentic">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/colm25_w4s/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						Weak-for-Strong: Training Weak Meta-Agent to Harness Strong Executors
+					</font>
+				</b><br>
+				Fan Nie, Lan Feng, Haotian Ye, Weixin Liang, <b>Pan Lu</b>, Huaxiu Yao, Alexandre Alahi, James Zou 
+				<br>
+				<b><a href="https://arxiv.org/abs/2504.04785" target="_blank">COLM 2025&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2504.04785" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://github.com/fannie1208/W4S" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="projects/colm25_w4s/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 			</div>
 		</div>
 		<hr>
@@ -908,7 +912,7 @@
 		<!-- Protein-LLM -->
 		<div class="row publication-item" data-category="ai-science">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="projects/arxiv25_protein-llm/cover.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="projects/emnlp25_protein-llm/cover.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b>
@@ -918,13 +922,13 @@
 				</b><br>
 				Yijia Xiao, Wanjia Zhao, Junkai Zhang, Yiqiao Jin, Han Zhang, Zhicheng Ren, Renliang Sun, Haixin Wang, Guancheng Wan, <b>Pan Lu</b>, Xiao Luo, Yu Zhang, James Zou, Yizhou Sun, Wei Wang
 				<br>
-				<b><a href="https://arxiv.org/abs/2502.17504" target="_blank">Preprint&nbsp;</a></b>
+				<b><a href="https://arxiv.org/abs/2502.17504" target="_blank">EMNLP 2025 (Findings)&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2502.17504" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://arxiv.org/pdf/2502.17504.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/Yijia-Xiao/Protein-LLM-Survey" target="_blank"> <small>[Tutorial]&nbsp;</small></a>
 				<a href="https://x.com/YIJIA_XIAO_/status/1895156151622263034" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="projects/arxiv25_protein-llm/bib.txt" target="_blank"> <small>[BibTex]</small></a>
-				<!-- <a href="https://github.com/Yijia-Xiao/Protein-LLM-Survey" target="_blank"><img src="https://img.shields.io/github/stars/Yijia-Xiao/Protein-LLM-Survey?style=social" alt="GitHub stars"></a> -->
+				<a href="projects/emnlp25_protein-llm/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+				<a href="https://github.com/Yijia-Xiao/Protein-LLM-Survey" target="_blank"><img src="https://img.shields.io/github/stars/Yijia-Xiao/Protein-LLM-Survey?style=social" alt="GitHub stars"></a>
 			</div>
 		</div>
 		<hr>
@@ -1406,7 +1410,9 @@
 				<a href="https://github.com/CHATS-lab/KokoMind/tree/main" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1676708418697203713" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/shi_weiyan/status/1676697071674601473" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="bibs/kokomind2023.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/kokomind2023.txt" target="_blank"> <small>[BibTex]</small></a>
+				<a href="https://github.com/CHATS-lab/KokoMind/tree/main" target="_blank"><img src="https://img.shields.io/github/stars/CHATS-lab/KokoMind?style=social" alt="GitHub stars"></a>
+				<br>
 				(*Equal Contribution)
 			</div>
 		</div>
@@ -1923,7 +1929,7 @@
 				<a><strong>Pan Lu</strong>, Lei Ji, Wei Zhang, Nan Duan, Ming Zhou, Jianyong Wang</a><br>
 				<b><a href="https://www.kdd.org/kdd2018/" target="_blank">SIGKDD 2018&nbsp;</a></b>
 				<a href="papers/kdd18_rvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Data]&nbsp;</small></a>
 				<a href="https://www.youtube.com/watch?v=OQoqpRuY4L4" target="_blank"> <small>[Video]&nbsp;</small></a>
 				<a href="bibs/kdd18_rvqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
