--- a/index.html
+++ b/index.html
@@ -625,9 +625,9 @@
 		<h3 id="Travels" style="">Upcoming Travel</h3>
 		<hr>
 		<ul>
-			<li>October 25 - October 26, 2025:
+			<!-- <li>October 25 - October 26, 2025:
 				<a href="" target="_blank">Stanford NLP Retreat, California</a>
-			</li>
+			</li> -->
 			<li>December 2 - December 7, 2025:
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
 			</li>
@@ -637,8 +637,8 @@
 			<!-- <li>July 2 - July 7, 2026:
 				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a> (TBD)
 			</li> -->
-			<!-- <li>October 2026 (TBD):
-				<a href="https://colmweb.org/index.html" target="_blank">COLM 2026 at XXXX (TBD)</a>
+			<!-- <li>October 7 - October 9, 2026:
+				<a href="https://colmweb.org/" target="_blank">COLM 2026 at Philadelphia, Pennsylvania</a>
 			</li> -->
 		</ul>
 	</div><br>
@@ -695,6 +695,10 @@
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
 				<a id="award" href="https://huggingface.co/papers/date/2025-10-08" target="_blank">
 					<font color="red"><b>#2 Paper of the day on Hugging Face</b></font>
+				</a>
+				<br>
+				<a id="award" href="https://huggingface.co/spaces?date=2025-W42" target="_blank">
+					<font color="red"><b>#1 Space of the week on Hugging Face</b></font>
 				</a>
 			</div>
 		</div>
@@ -1212,7 +1216,7 @@
 				</b><br>
 				Xiao Liu, Zirui Wu, Xueqing Wu, <b>Pan Lu</b>, Kai-Wei Chang, Yansong Feng
 				<br>
-				<b><a href="https://2024.aclweb.org/" target="_blank">ACL 2024&nbsp;</a> (Findings)</b>
+				<b><a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a> (Findings)</b>
 				<a href="https://xxxiaol.github.io/QRData/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://arxiv.org/abs/2402.17644" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://arxiv.org/pdf/2402.17644.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
