--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="shortcut icon" href="files/stanford.png" />
+	<link rel="shortcut icon" href="./files/stanford.png" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111713571-1"></script>
 	<script>
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 
 	<!-- Custom styles for this template -->
-	<link rel="stylesheet" href="files/panlu.css">
+	<link rel="stylesheet" href="./files/panlu.css">
 </head>
 
 
@@ -77,7 +77,7 @@
 	<div class="container">
 		<div class="col-md-3" id="div-image">
 			<br>
-			<img class="img-responsive img-rounded" src="files/pan.jpeg" alt=""
+			<img class="img-responsive img-rounded" src="./files/pan.jpeg" alt=""
 						style="max-width: 240px; border:1px solid black"><br>
 			<!-- Icons -->
 			<div style="font-size: 24px;">
@@ -98,7 +98,7 @@
 				<a target="_blank" href="https://www.linkedin.com/in/pan-lu-9308909a/">
 					<font color="gray"><i class="fab fa-linkedin fa-lg"></i></font>
 				</a>&thinsp;
-				<!-- <a target="_blank" href="files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
+				<!-- <a target="_blank" href="./files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
 				<a target="_blank" href="https://twitter.com/lupantech">
 					<font color="gray"><i class="fab fa-twitter fa-lg"></i></font>
 				</a>
