--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="shortcut icon" href="files/stanford.png" />
+	<link rel="shortcut icon" href="asset/stanford.png" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111713571-1"></script>
 	<script>
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 
 	<!-- Custom styles for this template -->
-	<link rel="stylesheet" href="files/panlu.css">
+	<link rel="stylesheet" href="asset/panlu.css">
 </head>
 
 
@@ -77,7 +77,7 @@
 	<div class="container">
 		<div class="col-md-3" id="div-image">
 			<br>
-			<img class="img-responsive img-rounded" src="files/pan.jpeg" alt=""
+			<img class="img-responsive img-rounded" src="asset/pan.jpeg" alt=""
 						style="max-width: 240px; border:1px solid black"><br>
 			<!-- Icons -->
 			<div style="font-size: 24px;">
@@ -98,7 +98,7 @@
 				<a target="_blank" href="https://www.linkedin.com/in/pan-lu-9308909a/">
 					<font color="gray"><i class="fab fa-linkedin fa-lg"></i></font>
 				</a>&thinsp;
-				<!-- <a target="_blank" href="./files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
+				<!-- <a target="_blank" href="./asset/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
 				<a target="_blank" href="https://twitter.com/lupantech">
 					<font color="gray"><i class="fab fa-twitter fa-lg"></i></font>
 				</a>
@@ -672,7 +672,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo"><img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -798,7 +798,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -852,7 +852,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo"><img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -888,7 +888,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo"><img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -1070,7 +1070,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">
@@ -1157,7 +1157,7 @@
 			</div>
 			<div class="col-md-9">
 				<!-- <a href="https://github.com/YujieLu10/TIP">
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a> -->
 				<b>
 					<font color="black">Multimodal Procedural Planning via Dual Text-Image Prompting</font>
@@ -1235,7 +1235,7 @@
 			</div>
 			<div class="col-md-9">
 				<!-- <a href="">
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a> -->
 				<b>
 					<font color="black">SciBench: Evaluating College-Level Scientific Problem-Solving Abilities of Large Language Models</font>
@@ -1292,7 +1292,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="https://mathvista.github.io/">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo"><img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">MathVista: Evaluating Mathematical Reasoning of Foundation Models in Visual Contexts</font>
@@ -1336,7 +1336,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="https://github.com/OpenGVLab/LLaMA-Adapter">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo"><img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">LLaMA-Adapter: Efficient Fine-tuning of Language Models with Zero-init Attention					</font>
@@ -1366,7 +1366,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="https://chameleon-llm.github.io/">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo"><img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">Chameleon: Plug-and-Play Compositional Reasoning with Large Language Models</font>
@@ -1404,7 +1404,7 @@
 			</div>
 			<div class="col-md-9">
 				<!-- <a href="https://chats-lab.github.io/KokoMind/">
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a> -->
 				<b>
 					<font color="black">KokoMind: Can LLMs Understand Social Interactions?</font>
@@ -1429,7 +1429,7 @@
 			</div>
 			<div class="col-md-9">
 				<!-- <a href="https://github.com/wenhuchen/TheoremQA">
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a> -->
 				<b>
 					<font color="black">TheoremQA: A Theorem-driven Question Answering Dataset</font>
@@ -1453,7 +1453,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="https://github.com/OpenGVLab/LLaMA-Adapter">
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">LLaMA-Adapter V2: Parameter-Efficient Visual Instruction Model</font>
@@ -1482,7 +1482,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="https://github.com/lupantech/dl4math">
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">A Survey of Deep Learning for Mathematical Reasoning</font>
@@ -1514,7 +1514,7 @@
 			<div class="col-md-9">
 				<a href="https://promptpg.github.io/">
 					<!-- <img src="logos/promptpg.png" id="logo"> -->
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">Dynamic Prompt Learning via Policy Gradient for Semi-structured Mathematical
@@ -1548,7 +1548,7 @@
 			<div class="col-md-9">
 				<a href="https://scienceqa.github.io/">
 					<!-- <img src="logos/scienceqa.png" id="logo"> -->
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo"><img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">Learn to Explain: Multimodal Reasoning via Thought Chains for Science Question
@@ -1769,7 +1769,7 @@
 				</a> -->
 				<a href="https://lupantech.github.io/inter-gps/">
 					<!-- <img src="logos/scienceqa.png" id="logo"> -->
-					<img src="logos/fire.png" id="logo">
+					<img src="asset/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">Inter-GPS: Interpretable Geometry Problem Solving with Formal Language and
