--- a/index.html
+++ b/index.html
@@ -632,13 +632,13 @@
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
 			</li>
 			<!-- <li>June 3 - June 7, 2026:
-				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a> (TBD)
+				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a>
 			</li> -->
 			<!-- <li>July 2 - July 7, 2026:
-				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a> (TBD)
+				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a>
 			</li> -->
-			<!-- <li>October 7 - October 9, 2026:
-				<a href="https://colmweb.org/" target="_blank">COLM 2026 at Philadelphia, Pennsylvania</a>
+			<!-- <li>October 6 - October 9, 2026:
+				<a href="https://colmweb.org/" target="_blank">COLM 2026 at San Francisco, California</a>
 			</li> -->
 		</ul>
 	</div><br>
