--- a/index.html
+++ b/index.html
@@ -634,8 +634,14 @@
 			<!-- <li>June 3 - June 7, 2026:
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a>
 			</li> -->
+			<!-- <li>June 29 - July 3, 2026:
+				<a href="https://learningtheory.org/colt2026/" target="_blank">COLT 2026 at San Diego, California</a>
+			</li> -->
 			<!-- <li>July 2 - July 7, 2026:
 				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a>
+			</li> -->
+			<!-- <li>September 27 - October 1, 2026:
+				<a href="https://www.iros26.org/" target="_blank">IROS 2026 at Pittsburgh, Pennsylvania</a>
 			</li> -->
 			<!-- <li>October 6 - October 9, 2026:
 				<a href="https://colmweb.org/" target="_blank">COLM 2026 at San Francisco, California</a>
