--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 					<br>
 					<p> 
 						I am a Postdoctoral Scholar at Stanford University. 
-						I am affiliated with <a href="https://ai.stanford.edu/" target="_blank">Stanford AI Lab</a>, 
-						<a href="https://www.james-zou.com/people" target="_blank">Zou's Group</a>, and <a href="https://yejinc.github.io/" target="_blank">Choi's xlab</a>, 
+						I am affiliated with <a href="https://nlp.stanford.edu/people/" target="_blank">Stanford NLP Group</a> and <a href="https://ai.stanford.edu/" target="_blank">Stanford AI Lab</a>,
 						where I am fortunate to be advised by Professor <a href="https://www.james-zou.com/" target="_blank">James Zou</a> and Professor <a href="https://yejinc.github.io/" target="_blank">Yejin Choi</a>.
 					</p>
 					<p>
